Updated Experience Section

--- a/experience.html
+++ b/experience.html
@@ -49,7 +49,7 @@
 
                 <div class="role-container">
                     <!-- <a href="experience-one.html"id="dell_1"> -->
-                    <h2 class="company">Dell <span id="role">/ Business Analyst</span>
+                    <h2 class="company">Dell <span id="role">/ Associate Product Manager</span>
                         <div class="arrow-container">
                             <!-- <a href="experience-one.html" class="arrow"  id="dell_1">
                                 <i></i>
@@ -82,7 +82,7 @@
 
                 <div class="role-container">
                     <!-- <a href="experience-two.html"> -->
-                    <h2 class="company">Dell <span id="role">/ Business Analyst Intern</span>
+                    <h2 class="company">Dell <span id="role">/ Product Management Intern</span>
                         <div class="arrow-container">
                             <!-- <a href="experience-two.html" class="arrow">
                                 <i></i>
@@ -100,7 +100,7 @@
                     <p class="time-duration">February 2019 - May 2019, <span id="role"> Bangalore, India</span> </p>
 
                     <div class="content-section exp">
-                        <!-- <h3 class="experience-detail-heading">Dell <span id="role">/ Business Analyst Intern</span></h3> -->
+                        <!-- <h3 class="experience-detail-heading">Dell <span id="role">/ Product Management Intern</span></h3> -->
                         <ul class="experience-detail-list-container">
                             <li>Worked with the CoC and PG Analytics team under the Performance Analytics Group (PAG) on conceptualization, implementation, and improvement of the WAPP model for Dell's Inspiron, XPS, and Alienware for both Notebooks and Desktops.</li>
                             <li>Developed a VBA tool for the EMEA Pricing team to automate the weekly BI Reporting activities saving about 35 hours a week.</li>
@@ -132,7 +132,7 @@
                     <p class="time-duration">May 2018 - June 2018, <span id="role"> Delhi, India</span> </p>
 
                     <div class="content-section exp">
-                        <!-- <h3 class="experience-detail-heading">Ernst and Young <span id="role">/ Business Analyst Intern</span></h3> -->
+                        <!-- <h3 class="experience-detail-heading">Ernst and Young <span id="role">/ Data Analyst Intern</span></h3> -->
                         <ul class="experience-detail-list-container">
                             <li>Worked with the Ministry of Consumer Affairs, Food, and Public Distribution department on the PDS (Public Distribution Systems) scheme implemented by the central government of India.</li>
                             <li>Built a Tableau dashboard highlighting several mismanagements/frauds taking place at the district and state levels, like grain offtake being more than the eligible limit under some RC's.</li>
@@ -144,7 +144,7 @@
 
                 <div class="role-container">
                     <!-- <a href="experience-four.html"> -->
-                    <h2 class="company">Webloom Solutions <span id="role">/ Fullstack Web Developer</span>
+                    <h2 class="company">Webloom Solutions <span id="role">/ Product Management Intern</span>
                         <div class="arrow-container">
                             <!-- <a href="experience-four.html" class="arrow">
                                 <i></i>
@@ -162,7 +162,7 @@
                     <p class="time-duration">Aug 2016 - Feb 2017, <span id="role"> Manipal, India</span> </p>
 
                     <div class="content-section exp">
-                        <!-- <h3 class="experience-detail-heading">Webloom Solutions <span id="role">/ Web Development Intern</span></h3> -->
+                        <!-- <h3 class="experience-detail-heading">Webloom Solutions <span id="role">/ Product Management Intern</span></h3> -->
                         <ul class="experience-detail-list-container">
                             <li>Empowered SMB's around Manipal to go digital, helping them expand their customer base, and eventually improve revenue.</li>
                             <li>Developed a customer registration desktop app using Electron and Flask, to help businesses keep a record of existing customers and add new ones. Later, it was integrated with Twilio, to send promotional messages from directly within the application.</li>
