--- a/experience.html
+++ b/experience.html
@@ -46,6 +46,34 @@
             <div class="content-section">
             <!-- <div class="Exp"> -->
                 <h1 class="heading">Experience</h1>
+                
+                <div class="role-container">
+                    <!-- <a href="experience-one.html"id="dell_1"> -->
+                    <h2 class="company">NVIDIA <span id="role">/ Product Management Intern</span>
+                        <div class="arrow-container">
+                            <!-- <a href="experience-one.html" class="arrow"  id="dell_1">
+                                <i></i>
+                                <svg>
+                                    <use xlink:href="#circle">
+                                </svg>
+                            </a> -->
+                            <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+                                <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="44px" height="44px" id="circle" fill="none" stroke="currentColor">
+                                    <circle r="20" cy="22" cx="22" id="test">
+                                </symbol>
+                            </svg>
+                        </div></h2>
+                    <!-- </a> -->
+
+                    <p class="time-duration">May 2022 - August 2022, <span id="role"> Santa Clara, CA</span> </p>
+                    <div class="content-section exp">
+                        <!-- <h3 class="experience-detail-heading">Dell <span id="role">/ Business Analyst</span></h3> -->
+                        <ul class="experience-detail-list-container">
+                            <li>Lead the ideation, roadmap development, and launch of a new feature by collaborating cross-functionally with the engineering, design, and web analytics team to analyze metrics that determine product success. Increased user sign-ups by 23% </li>
+                            <li>Drove the web publishing process optimization by conducting 20 customer interviews, gathering feedback, and understanding pain points. Wrote user stories, defined acceptance criteria, and created requirements documents to establish a shared product vision </li>
+                        </ul>
+                    </div>
+                </div>
 
                 <div class="role-container">
                     <!-- <a href="experience-one.html"id="dell_1"> -->
@@ -65,18 +93,16 @@
                         </div></h2>
                     <!-- </a> -->
 
-                    <p class="time-duration">July 2019 - Present, <span id="role"> Bangalore, India</span> </p>
+                    <p class="time-duration">July 2019 - July 2021, <span id="role"> Bangalore, India</span> </p>
                     <div class="content-section exp">
                         <!-- <h3 class="experience-detail-heading">Dell <span id="role">/ Business Analyst</span></h3> -->
                         <ul class="experience-detail-list-container">
-                            <li>Part of the Product and Pricing Analytics team under DGA (Dell Global Analytics) responsible for driving growth, profitability, and operational excellence for the Consumer Business segment worth $600 million annually across 4 countries in EMEA.</li>
-                            <li>Built a Machine Learning pipeline with an automated feedback loop to predict the conversion likelihood of open business quotes with a 92.3% base accuracy and fine-tuned existing models using hyperparameter optimization.</li>
-                            <li>Managed WAPP (Weighted Average Price Positioning) and Price Elasticity models with weekly and monthly level rollouts to pricing managers, pricing directors, and senior executives like VP's.</li>
-                            <li>Developed a price recommender for clamshell and convertible notebooks using KNN Imputation, Lasso regularization, and XGBoost Regression, having a $19M incremental impact on revenue.</li>
-                            <li>Served as the Automation SPOC, driving automation across the team to help develop efficient, robust, and scalable solutions with 130% target attainment for FY21.</li>
-                            <li>Migrated our legacy cost tool to a Power BI dashboard to help cycle planners view and manage data seamlessly on a single platform, and plan ahead for the upcoming cost cycle. Scaled it to 12 countries in 3 regions.</li>
-                            <li>Revamped the existing manual data cleaning process into an automated one, with action-oriented insights and findings, eventually paving way for the expansion of these programs in new regions and segments.</li>
-                        </ul>
+                            <li>Tracked and documented product proposals, status updates, and key decisions and facilitated coordination among product managers </li>
+                            <li>Worked cross-functionally to create and implement project timelines with risk assessments and mitigation plans </li>
+                            <li>Defined the product vision to direct agile development teams and stakeholders, as well as the metrics to measure success. Developed product roadmaps and built alignment across product teams. Created presentation decks on PowerPoint to present to key stakeholders </li>
+                            <li>Used Jira to manage items in the product backlog, wrote user stories, managed requirements, and defined clear acceptance criteria for product features. Created daily, weekly, monthly, and quarterly reports displaying key metrics through data review and analysis </li>
+                            <li>Performed requirements gathering as the automation SPOC. drove automation across teams to create efficient, robust, and scalable solutions and achieved 130% target attainment for FY21. Conducted stand-ups and scrum meetings to monitor progress on Jira </li>
+                       </ul>
                     </div>
                 </div>
 
@@ -164,11 +190,8 @@
                     <div class="content-section exp">
                         <!-- <h3 class="experience-detail-heading">Webloom Solutions <span id="role">/ Product Management Intern</span></h3> -->
                         <ul class="experience-detail-list-container">
-                            <li>Empowered SMB's around Manipal to go digital, helping them expand their customer base, and eventually improve revenue.</li>
-                            <li>Developed a customer registration desktop app using Electron and Flask, to help businesses keep a record of existing customers and add new ones. Later, it was integrated with Twilio, to send promotional messages from directly within the application.</li>
+                            <li>Gathered requirements, wrote user stories on Jira, defined acceptance criteria and developed a customer management app to help businesses manage existing customers and add new ones; led to 23% revenue increase and improved customer acquisition by 30%</li>
                         </ul>
-
-
                     </div>
                 </div>
 
