--- a/certification.html
+++ b/certification.html
@@ -55,7 +55,7 @@
 
                     <a href="
 https://www.credly.com/badges/45e2fb61-648c-4ac7-83c3-fc57126d427a/public_url" class="certificate-link" target="_blank"><div class="certificate-holder">
-                        <h3 id="certificate-title">PSM 1: Professional Scrum Master™ I<br> <span id="certification-authority">Scrum.org</span></h3>
+                        <h3 id="certificate-title">PSM I: Professional Scrum Master™ I<br> <span id="certification-authority">Scrum.org</span></h3>
                     </div></a>
                 </section>
                 
