--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="intro-text-holder">
-                    <p id="intro-text" class="introduction-text">I'm a current Master's student at Texas A&M University, Mays Business School. My major of study is Management Information Systems. <br><br><i><span class="hook">When I'm not solving complex problems, you can find me ...</span></i></p>
+                    <p id="intro-text" class="introduction-text">I'm a MS-MIS student at Texas A&M University, currently looking for full-time opportunities in the areas of Product Management and Analytics. <br><br><i><span class="hook">When I'm not studying, you can find me ...</span></i></p>
                 </div>
 
 
