--- a/contact.html
+++ b/contact.html
@@ -52,12 +52,9 @@
                     <span id="email-text">Feel free to drop me an email or contact me on LinkedIn</span>
 
                     <div class="contact-link-container">
-                        <!-- <i class="fas fa-envelope"></i> -->
                         <span class="contact-links" id="email"><a href="mailto:rohitgird12@gmail.com" target="_blank">Email</a></span><br>
-                        <!-- <i class="fab fa-linkedin-in"></i> -->
                         <span class="contact-links" id="linkedin"><a href="https://www.linkedin.com/in/rohitgd/" target="_blank">LinkedIn</a></span><br>
-                        <!-- <i class="fab fa-facebook-f"></i> -->
-                        <!-- <span class="contact-links" id="facebook"><a href="https://www.facebook.com/rohitgd" target="_blank">Facebook</a></span> -->
+                        <span class="contact-links" id="instagram"><a href="https://www.instagram.com/rohitgird/" target="_blank">Instagram</a></span><br>
                     </div>
 
                 </div>
