--- a/index.html
+++ b/index.html
@@ -135,6 +135,16 @@
                         <img src="./img/14.jpg" loading="lazy" alt="Gym Flex" class="image-gym">
                     </div>
                 </div>
+                
+                <div class="about-sub-section-container" id="intro-text">
+                    <div class="block gym-block" data-fx="6">
+                        <a class="block__link" target="#">
+                            <h1>Taking it out for a spin</h1>
+                        </a>
+                        <p class="profile-text"> For me, driving is not just a mode of transportation, but a hobby and a passion. The act of driving provides a unique escape from the daily grind, where I can clear my mind, focus on the present moment, and immerse myself in the beauty of the journey.</p>
+                        <img src="./img/30.jpg" loading="lazy" alt="Car Image" class="image-car">
+                    </div>
+                </div>
 
                 <div class="about-sub-section-container" id="intro-text">
                     <div class="block hackathon-block" data-fx="6">
