--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <h1>Taking it out for a spin</h1>
                         </a>
                         <p class="profile-text"> For me, driving is not just a mode of transportation, but a hobby and a passion. The act of driving provides a unique escape from the daily grind, where I can clear my mind, focus on the present moment, and immerse myself in the beauty of the journey.</p>
-                        <img src="./img/30.jpeg" loading="lazy" alt="Car Image" class="image-main">
+                        <img src="./img/30.jpeg" loading="lazy" alt="Car Image" class="image-gym">
                     </div>
                 </div>
 
