--- a/experience.html
+++ b/experience.html
@@ -49,7 +49,7 @@
                 
                 <div class="role-container">
                     <!-- <a href="experience-one.html"id="dell_1"> -->
-                    <h2 class="company">NVIDIA <span id="role">/ Product Management Intern</span>
+                    <h2 class="company">NVIDIA <span id="role">/ Data Product Management Intern – Enterprise Solutions </span>
                         <div class="arrow-container">
                             <!-- <a href="experience-one.html" class="arrow"  id="dell_1">
                                 <i></i>
@@ -77,7 +77,7 @@
 
                 <div class="role-container">
                     <!-- <a href="experience-one.html"id="dell_1"> -->
-                    <h2 class="company">Dell <span id="role">/ Associate Product Manager</span>
+                    <h2 class="company">Dell <span id="role">/ Product Manager – Consumer and Small Business Solutions </span>
                         <div class="arrow-container">
                             <!-- <a href="experience-one.html" class="arrow"  id="dell_1">
                                 <i></i>
@@ -108,7 +108,7 @@
 
                 <div class="role-container">
                     <!-- <a href="experience-two.html"> -->
-                    <h2 class="company">Dell <span id="role">/ Product Management Intern</span>
+                    <h2 class="company">Dell <span id="role">/ Product Manager – Consumer and Small Business Solutions </span>
                         <div class="arrow-container">
                             <!-- <a href="experience-two.html" class="arrow">
                                 <i></i>
@@ -141,7 +141,7 @@
 
                 <div class="role-container">
                     <!-- <a href="experience-three.html"> -->
-                    <h2 class="company">Ernst and Young <span id="role">/ Data Analyst Intern</span><div class="arrow-container">
+                    <h2 class="company">Ernst and Young <span id="role">/ Technical Product Manager – Digital Sustainability </span><div class="arrow-container">
                         <!-- <a href="experience-three.html" class="arrow">
                             <i></i>
                             <svg>
@@ -170,7 +170,7 @@
 
                 <div class="role-container">
                     <!-- <a href="experience-four.html"> -->
-                    <h2 class="company">Webloom Solutions <span id="role">/ Product Management Intern</span>
+                    <h2 class="company">Webloom Solutions <span id="role">/ Technical Product Manager – Web Technology and UX Design</span>
                         <div class="arrow-container">
                             <!-- <a href="experience-four.html" class="arrow">
                                 <i></i>
@@ -185,7 +185,7 @@
                             </svg>
                         </div></h2>
                     <!-- </a> -->
-                    <p class="time-duration">Aug 2016 - Feb 2017, <span id="role"> Manipal, India</span> </p>
+                    <p class="time-duration">Feb 2016 - Aug 2018, <span id="role"> Manipal, India</span> </p>
 
                     <div class="content-section exp">
                         <!-- <h3 class="experience-detail-heading">Webloom Solutions <span id="role">/ Product Management Intern</span></h3> -->
