--- a/experience.html
+++ b/experience.html
@@ -108,7 +108,7 @@
 
                 <div class="role-container">
                     <!-- <a href="experience-two.html"> -->
-                    <h2 class="company">Dell <span id="role">/ Product Manager – Consumer and Small Business Solutions </span>
+                    <h2 class="company">Dell <span id="role">/ Product Management Intern – Consumer and Small Business Solutions </span>
                         <div class="arrow-container">
                             <!-- <a href="experience-two.html" class="arrow">
                                 <i></i>
